# brave-regression-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  console.rs  main.rs  paths.rs  wsl.rs
src/bisect/: mod.rs
src/diff/: mod.rs
src/gui/: app.rs  console_panel.rs  list_editor.rs  mod.rs  state.rs  tab_lists.rs  tab_versions.rs
src/gui/tab_versions/: settings.rs
src/lists/: apply.rs  catalog.rs  discover.rs  guard.rs  merge.rs  mod.rs  mutate.rs  pin.rs  prefs.rs  prefs_edit.rs  process_guard.rs  retention.rs  system_brave.rs  watcher.rs
src/offline/: mod.rs
src/profile/: mod.rs  reset.rs  seed.rs
src/report/: mod.rs
src/runner/: mod.rs
src/verdict/: mod.rs
src/versions/: detect.rs  diagnose.rs  github.rs  install.rs  launch.rs  mod.rs  retention.rs
user_scripts/: brave-as-chrome.user.js
